Implementation of Read CSV for Actors and adding to a linked list

--- a/DSA_Assignment/DSA_Assignment.vcxproj.filters
+++ b/DSA_Assignment/DSA_Assignment.vcxproj.filters
@@ -33,4 +33,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\Users\aaron\Downloads\data\actors.csv" />
+  </ItemGroup>
 </Project>
