--- a/DSA_Assignment/DSA_Assignment.vcxproj
+++ b/DSA_Assignment/DSA_Assignment.vcxproj
@@ -135,6 +135,9 @@
     <ClInclude Include="Actor.h" />
     <ClInclude Include="List.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\Users\aaron\Downloads\data\actors.csv" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
