--- a/DSA_Assignment/DSA_Assignment.vcxproj
+++ b/DSA_Assignment/DSA_Assignment.vcxproj
@@ -128,20 +128,21 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <None Include="..\..\..\Users\aaron\Downloads\data\actors.csv" />
-    <None Include="actors.csv" />
     <None Include="cast.csv" />
     <None Include="movies.csv" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Actor.cpp" />
-    <ClCompile Include="HashTable.cpp" />
+    <ClCompile Include="ActorHashTable.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Movie.cpp" />
+    <ClCompile Include="MovieHashTable.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
-    <ClInclude Include="HashTable.h" />
+    <ClInclude Include="ActorHashTable.h" />
     <ClInclude Include="Movie.h" />
+    <ClInclude Include="MovieHashTable.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
