--- a/DSA_Assignment/DSA_Assignment.vcxproj
+++ b/DSA_Assignment/DSA_Assignment.vcxproj
@@ -130,10 +130,12 @@
     <ClCompile Include="Actor.cpp" />
     <ClCompile Include="DSA_Assignment.cpp" />
     <ClCompile Include="List.cpp" />
+    <ClCompile Include="Movie.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
     <ClInclude Include="List.h" />
+    <ClInclude Include="Movie.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\Users\aaron\Downloads\data\actors.csv" />
